# url-creation

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  .stylelintrc.json  KenyaProduct.csv  advanced.html  html_genarator.py  html_generator.py  index.html  kenya_html_generator.py  package-lock.json  package.json  product.csv  pyproject.toml  requirements.txt  script.js  setup.cfg  style.css  test.py  vercel.json
.parcel-cache/: 08c704665ae59154  0994530318c6854c  0b550de9945c4cea.txt  0bdd27def45aa0e6  1973a0a3d342f0c1  1bb4ff71308b4cc4  2152fcdaa3acbc12  2fc3881870e9181d  2fd1aaf4ea0da9f6.24048.3  2fe4192728ea0d74  3a9e151208800186  3abb05e3970a8500.txt  3beed832bc98a5ce  4f176f7b01cb1a24  5e25f1d440c40892  5f437e2dfc9e86f8  6968a3d57ac1c29f  782689db31b5fb1b  7841cae7402b2d43  9277f70d9a015c1c.txt  9661f0818fa886d0  980f637b7becb337  9de339372b8f4663  9fc060db4036323a.txt  a4767caed845a8c2  b836ed278cdddf08  ba75ef8c871694ad  bfe5626669dc4a3e  cc3d87b085534d05  ccc2258646d743a1  d3e68ea57ccacad5  dacf528ca55621d5  data.mdb  dc72d1f7529d6594  dd74872661a22790.txt  df67f83920c9461e  dfe7310bea97f09e  ea804c812c4a8ce0  ef0edb877d92943c  f067118b8b926af3.txt  (+4 more)
Bot/: Dockerfile  cloudbuild.yaml  main.py  requirements.txt
api/: index.py  vercel.json
cloud-generator/: Dockerfile  baia-project-baf0e69bbf86.json  cloudbuild.yaml  main.py  requirements.txt
input/: KenyaProduct.csv  product.csv
pub-sub/: Dockerfile  baia-project-fa892ac3343f.json  main.py  publisher.py  requirements.txt  subscriber.py
templates/: index.html  item.html  kenya_category.html  (+2 more)
(+19 files in other folders)
